[package]
name = "weaver"
version = "1.0.0"
edition = "2021"
authors = ["Ethan Wolff"]
description = "A program to solve weaver problems"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
spinners = "4.1"
colored = "2.0"
